--- a/ProjetAnalysededonnees.Rmd
+++ b/ProjetAnalysededonnees.Rmd
@@ -101,6 +101,16 @@ a:hover {
 
 
 
+```{recho "# Analyses-de-donn-es-projet-rmd" >> README.md}
+
+git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin 
+git push -u origin main
+```
+
 
 
 
