--- a/ProjetAnalysededonnees.Rmd
+++ b/ProjetAnalysededonnees.Rmd
@@ -105,6 +105,7 @@ range(df$Depth)
 
 
 ```
+## Calcule des paramètres de dispersions
 
 ```{r}
 
@@ -165,11 +166,14 @@ apply(df_quant,2,sd)
 apply(df_quant,2,sd)/apply(df_quant,2,mean)
 ```
 
+##Graphiques des analyses univariés
+
 ```{r}
 library(ggplot2)
 library(viridis)  # pour une palette de couleurs agréable
 
 ```
+
 
 ```{r}
 ggplot(df, aes(x = "", y = Depth)) +
@@ -196,12 +200,34 @@ ggplot(df, aes(x = "", y = Depth)) +
 ```{r}
 ggplot(df,aes(x=Magnitude))+
   geom_histogram(binwidth = 0.2, fill="lightgreen", color="black", alpha=0.7)+
+  geom_density(color = "red", size = 1.2) +
   theme_minimal()+
   labs(title="Histogramme de la magnitude de éruptions ",
        x="Magnitude",
        y="")+
   theme(plot.title = element_text(hjust = 0.5, face="bold", size=16))
-#density + le boxplot 
+```
+
+
+```{r}
+ggplot(df, aes(x = "", y = Magnitude)) +
+  geom_boxplot(outlier.shape = 16, outlier.color = "red", alpha = 0.7) +  # outliers visibles
+  stat_summary(fun = mean, geom = "point", shape = 18, size = 3, color = "blue") + # moyenne
+  scale_fill_viridis(discrete = TRUE, option = "D") +  # palette harmonieuse
+  theme_minimal(base_size = 14) +
+  scale_y_log10() +
+  labs(
+    title = "Distribution des magnitudes pour l'ensemble des volcans",
+    x = "",
+    y = "Magnitude"
+  ) +
+  theme(
+    legend.position = "none",
+    axis.text.x = element_text(angle = 45, hjust = 1),  # rotation labels si nécessaire
+    plot.title = element_text(face = "bold", size = 16),
+    plot.subtitle = element_text(size = 12))
+
+```
 ```
 
 ```{r}
@@ -230,6 +256,10 @@ ggplot(df, aes(x = Volcanoes, y = Magnitude, fill = Volcanoes)) +
     plot.title = element_text(face = "bold", size = 16),
     plot.subtitle = element_text(size = 12))
 ```
+
+
+#Analyse bivariés
+
 ```{r}
 #que 2 variables pas 3, faire test de corrélation linéaire dessus 
 ```
