--- a/ProjetAnalysededonnees.Rmd
+++ b/ProjetAnalysededonnees.Rmd
@@ -32,7 +32,7 @@ L’objectif est de comprendre si il existe un lien entre intensité de l’éru
 ## Chargement et préparation des données
 
 ```{r}
-packages <- c("dplyr", "ggplot2", "tidyr","performance","car","maps")
+packages <- c("dplyr", "ggplot2", "tidyr","performance","car","maps","ggspatial","sf", "prettymapr")
 
 installed_packages <- rownames(installed.packages())
 to_install <- packages[!(packages %in% installed_packages)]
@@ -50,11 +50,22 @@ invisible(lapply(packages, function(pkg) {
 ```
 
 ```{r}
-ggplot(df, aes(x = Longitude, y = Latitude)) +
-  borders(c("gr"), colour = "gray70", fill = "gray95") +
-  geom_point(aes(color = Volcanoes), alpha = 0.7) +
-  coord_quickmap() +
-  theme_minimal()
+
+ggplot() +
+  annotation_map_tile(type = "osm", zoomin = -1) +  # Fond OpenStreetMap
+  geom_point(
+    data = df,
+    aes(x = Longitude, y = Latitude, color = Volcanoes),
+    size = 3, alpha = 0.9
+  ) +
+  coord_sf(xlim = c(12, 27), ylim = c(35, 41), expand = FALSE) +
+  theme_minimal() +
+  labs(
+    title = "Localisation des volcans en Italie du Sud et en Grèce",
+    x = "Longitude",
+    y = "Latitude",
+    color = "Volcan"
+  )
 
 ```
 
