--- a/ProjetAnalysededonnees.Rmd
+++ b/ProjetAnalysededonnees.Rmd
@@ -32,7 +32,7 @@ L’objectif est de comprendre si il existe un lien entre intensité de l’éru
 ## Chargement et préparation des données
 
 ```{r}
-packages <- c("dplyr", "ggplot2", "tidyr","performance","car","maps","ggspatial","sf", "prettymapr")
+packages <- c("dplyr", "ggplot2", "tidyr","performance","car","maps","ggspatial","sf", "prettymapr","rnaturalearth","rnaturalearthdata")
 
 installed_packages <- rownames(installed.packages())
 to_install <- packages[!(packages %in% installed_packages)]
@@ -51,24 +51,75 @@ invisible(lapply(packages, function(pkg) {
 
 ```{r}
 
-ggplot() +
-  annotation_map_tile(type = "osm", zoomin = -1) +  # Fond OpenStreetMap
+
+world <- ne_countries(scale = "medium", returnclass = "sf")
+
+# Tracer la carte
+ggplot(data = world) +
+  geom_sf(fill = "antiquewhite") +
   geom_point(
     data = df,
     aes(x = Longitude, y = Latitude, color = Volcanoes),
-    size = 3, alpha = 0.9
+    size = 2, alpha = 0.9
   ) +
-  coord_sf(xlim = c(12, 27), ylim = c(35, 41), expand = FALSE) +
+  coord_sf(xlim = c(12, 30), ylim = c(35, 42), expand = FALSE) +
   theme_minimal() +
   labs(
     title = "Localisation des volcans en Italie du Sud et en Grèce",
     x = "Longitude",
     y = "Latitude",
     color = "Volcan"
-  )
+  ) +
+  theme(panel.background = element_rect(fill = "lightblue"),
+        panel.grid = element_line(color = "white"))
+
+
+
+```
+```{r}
+volcanIt <- df[15:36,]
+str(volcanIt)
+volcanGr <- df[c(1:13,37:47),]
+str(volcanGr)
+ggplot(data = world) +
+  geom_sf(fill = "antiquewhite") +
+  geom_point(
+    data = volcanIt,
+    aes(x = Longitude, y = Latitude, color = Volcanoes),
+    size = 2, alpha = 0.9
+  ) +
+  coord_sf(xlim = c(12, 19), ylim = c(36.5, 41.5), expand = FALSE) +
+  theme_minimal() +
+  labs(
+    title = "Localisation des volcans en Italie du Sud",
+    x = "Longitude",
+    y = "Latitude",
+    color = "Volcan"
+  ) +
+  theme(panel.background = element_rect(fill = "lightblue"),
+        panel.grid = element_line(color = "white"))
 
 ```
 
+```{r}
+ggplot(data = world) +
+  geom_sf(fill = "antiquewhite") +
+  geom_point(
+    data = volcanGr,
+    aes(x = Longitude, y = Latitude, color = Volcanoes),
+    size = 2, alpha = 0.9
+  ) +
+  coord_sf(xlim = c(19, 30), ylim = c(35.5, 39), expand = FALSE) +
+  theme_minimal() +
+  labs(
+    title = "Localisation des volcans de l'Archipelle des Dodecanese",
+    x = "Longitude",
+    y = "Latitude",
+    color = "Volcan"
+  ) +
+  theme(panel.background = element_rect(fill = "lightblue"),
+        panel.grid = element_line(color = "white"))
+```
 
 
 ```{r}
