--- a/ProjetAnalysededonnees.Rmd
+++ b/ProjetAnalysededonnees.Rmd
@@ -22,10 +22,10 @@ knitr::opts_chunk$set(echo = FALSE,message = FALSE)
 
 # Introduction 
 
-Dans le monde, on compte plus de 800 millions de personnes vivant à proximité d’un volcan dont 200 millions à moins de 30 km d’un volcan actif (CNRS, 2025). La caractérisation de l’aléa volcanique est donc essentielle pour la sureté des habitants en territoires volcaniques. Cela passe notamment par la compréhension de lien divers entre un volcan et le type de dépôts ou l’intensité éruptive qu’il produit. Notre étude se concentre sur la région méditerranéenne, en particulier sur deux édifices grecs et quatre édifices italiens, ces deux pays étant particulièrement connues pour leurs volcanismes très actifs et notamment plusieurs éruptions historiques. Les volcans italiens sont l’Etna (Sicile, Italie), le Vésuve (Naples, sud de l’Italie), Lipari et Vulcano (Iles Eoliennes, Sicile, Italie). Les volcans grecques sont le Santorin et le Nisyros (Iles Dodecanese, Grèce). Ici nous ne nous concentrerons que sur la période 2015 à 2025.
+Dans le monde, on compte plus de **800 millions** de personnes vivant à proximité d’un volcan dont **200 millions à moins de 30 km d’un volcan actif** (CNRS, 2025). La caractérisation de l’aléa volcanique est donc essentielle pour **la sureté des habitants** en territoires volcaniques. Cela passe notamment par la compréhension de lien divers entre un volcan et **le type de dépôts ou l’intensité éruptive** qu’il produit. Notre étude se concentre sur la région méditerranéenne, en particulier sur **deux édifices grecs** et **quatre édifices italiens**, ces deux pays étant particulièrement connues pour leurs volcanismes très actifs et notamment plusieurs éruptions historiques. Les volcans italiens sont **l’Etna (Sicile, Italie), le Vésuve (Naples, sud de l’Italie), Lipari et Vulcano (Iles Eoliennes, Sicile, Italie). Les volcans grecques sont le Santorin et le Nisyros (Iles Dodecanese, Grèce)**. Ici nous ne nous concentrerons que sur **la période 2015 à 2025**.
 
-Nous avons les données de magnitudes, types de magma et profondeur du magma pour chaque édifice volcanique en plus des coordonnées des éruptions pour chaque édifices.
-L’objectif est de comprendre si il existe un lien entre intensité de l’éruption (magnitude) et l’édifice volcanique afin de déterminer quelle population s’expose à un risque plus important. Il sera aussi particulièrement intéressant de regarder le lien possible entre volcans et type de magma car le risques lié à un volcan est en partie du au type de matériaux qu’il produit. Ces résultats pourrait également nous permettre de déterminer si les populations d’un volcan en particulier s’exposent à un risque accrue. Enfin, d’un point de vus purement recherche nous allons nous intéressé au lien entre édifice et profondeur du magma car c’est grâce à la détection du magma en profondeur que l’on peut anticiper une éruption mais aussi à la profondeur en fonction du type de magma, cela nous permettra, au terme d’une étude pétrologique ultérieure de prédire des temps de remonté du magma et des durées pré-éruptifs afin d’alerter la population en cas d’éruption imminente si ce lien existe.
+Nous avons **les données de magnitudes, types de magma, profondeur du magma, le VEI, la classification et le volume estimé de produits** pour chaque édifice volcanique en plus des coordonnées des éruptions pour chaque édifices.
+L’objectif est de comprendre si il existe un **lien entre intensité de l’éruption (magnitude) et l’édifice volcanique** afin de déterminer quelle population s’expose à un **risque** plus important. Il sera aussi particulièrement intéressant de regarder le **lien possible entre volcans et type de magma** car le risques lié à un volcan est en partie du au type de matériaux qu’il produit. Ces résultats pourrait également nous permettre de déterminer si **les populations** d’un volcan en particulier s’exposent à un **risque accrue**. Enfin, d’un point de vus purement recherche nous allons nous intéressé au **lien entre édifice et profondeur du magma** car c’est grâce à la détection du magma en profondeur que l’on peut **anticiper une éruption**. Egalement à **la profondeur en fonction du type de magma** mais cela nous permettra, au terme d’une étude pétrologique ultérieure de prédire des **temps de remonté du magma et des durées pré-éruptifs** afin **d’alerter la population** en cas d’éruption imminente si ce lien existe.
 
 # Analyse exploiratoire des données 
 
